# robot-palletizer

./: README.md  SETUP.md  cam_to_base_transform_test.py  example.py  main.py  palletizer.py  pyproject.toml  sim_test.py
backend/: kinova.py
src/planning/: environment.py  kinematics.py  trajectory_gen.py  utils.py
visualizer/6dof/urdf/: 6dof.urdf
visualizer/7dof/urdf/: 7dof_epick.urdf
