[project]
name = "kinova-control-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "kortex-api",
    "nptyping>=2.0.1",
    "numpy<2.0.0",
    "pybullet>=3.2.7",
    "protobuf<=3.20.3",
    "pyrealsense2>=2.56.5.9235",
    "opencv-python>=4.11.0.86",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[tool.uv.sources]
kortex-api = { path = "kortex_api-2.3.0.post34-py3-none-any.whl" }
